--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,9 @@ html
     header#header 
       .header-content 
         h2#site-name 
-        a(href="#") Casa Guitar
+        a(href="#") Home
+        a(href="#") About
+        a(href="#") Contact
     main#main 
       block main-content 
     footer#footer 
