--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,15 @@ body {
   background-color: black;
   color: white;
   padding: 2em;
+  display: flex;
+  justify-content: space-between;
+  column-gap: 1em;
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 1em;
 }
 
 
